<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">cGO</string>
    <string name="next">Next</string>
    <string name="start_exploring">Start Exploring</string>
    <string name="login_register">Login/Register</string>
    <string name="follow_easy_Step">Follow the easy step</string>
    <string name="make_sure_phone">Make sure the phone number is valid and the code will be
        sent by SMS to the number</string>
    <string name="boarding_word_1">Find your favorite\n sea experiences</string>
    <string name="boarding_word_2">Easy payment</string>
    <string name="boarding_word_3">Paperless check in</string>
    <string name="boarding_content_1">Book your favorite sea experiences. Sailing in Bali or join an
        open trip at your favorite destination, find it here.</string>
    <string name="boarding_content_2">We provide various payment options for your booking process.
        All you have to do is click and pay!</string>
    <string name="boarding_content_3">Save environtment, go paperless with our paper-free check in.</string>
    <string name="explore">Explore</string>
    <string name="blog">Blog</string>
    <string name="my_trips">My Trips</string>
    <string name="my_trip">My Trip</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="please_Check_email">Please check your email for booking confirmation within max. 24 hour.</string>
    <string name="or_register">Or Register Here with email used in your booking to check your confirmation status in our app.</string>
    <string name="ticket_only">Ticket Only</string>
    <string name="purchase">Purchases only ticket, there are no additional services</string>
    <string name="start_date">Start Date</string>
    <string name="guest">Guest</string>
    <string name="book">Book</string>
    <string name="schedule">Schedule</string>
    <string name="book_by">Booked By</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="pickup_service">Pickup Service</string>
    <string name="pickup_service2">Add a pickup service from your arrival airpiort</string>
    <string name="pickup_service3">Ticket + Pickup Service</string>
    <string name="book_sea">Book sea experiences you’ll love</string>
    <string name="book_sea2">Where do you want to go?</string>
    <string name="price">Price</string>
    <string name="proceeding">By proceeding, you confirm that you accept </string>
    <string name="our">Our</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="promo">Special Promo</string>
    <string name="promo_code">Promo Code</string>
    <string name="promo_content">Get exclusive promo for your adventure</string>
    <string name="inpiration">Trip Insipiration</string>
    <string name="inpiration_content">Trip inspiration for your next adventure</string>
    <string name="credits">Credits</string>
    <string name="credit_content">Collect and redeem your points</string>
    <string name="avaibility">Availability</string>
    <string name="minimum_booking"> Minimum booking for 3 days ahead</string>
    <string name="wishlist">Wishlist</string>
    <string name="wishlist_content">To save the destination that you will visit</string>
    <string name="smart_profile">Smart Profile</string>
    <string name="smart_profile_content">Simplify the data filling process</string>
    <string name="share_referal_code">Share Referral Code</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="see_all_fac">See all facilities</string>
    <string name="experience">Experience</string>
    <string name="packages">Package</string>
    <string name="reviews">Reviews</string>
    <string name="overall_ratings">Overall Ratings</string>
    <string name="transportation">Transportation</string>
    <string name="benefits">Log In or Register to get special benefits</string>
    <string name="diving">Diving</string>
    <string name="facilities">Facilities</string>
    <string name="fishing">Fishing</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="island_hoping">Island Hoping</string>
    <string name="learn_more">Learn More</string>
    <string name="get_direction">Get Direction</string>
    <string name="referal">Share your referral code and collect credits for your next adventure</string>
    <string name="sailing">Sailing</string>
    <string name="sailing_content">Explore Sailing Experiences in Bali </string>
    <string name="sailing_content2">Charter a boat and create a happy memories with your friends and family</string>
    <string name="tour">Tour</string>
    <string name="point_request">We provide meeting point request. You would be able to chat with us for meeting point request after payment.</string>
    <string name="tour_content">Explore Tour Experiences in Labuan Bajo</string>
    <string name="tour_content2">Enjoy living on board with adventurous activities from trekking, island hopping to snorkeling</string>
    <string name="snorkeling">Snorkeling</string>
    <string name="snorkeling_content">Find Snorkeling Spots in Bali</string>
    <string name="snorkeling_content2">Explore beautiful snorkeling spots in popular destination</string>
    <string name="itinerary">Itinerary</string>
    <string name="pickup_options">Pickup options : </string>
    <string name="pickuo_time">Pickup time : </string>
    <string name="meeting_point">Meeting Point</string>
    <string name="read_more">Read More</string>
    <string name="see_more">See More</string>
    <string name="enjoy_sea"> 300+ Sea Experiences to Enjoy</string>
    <string name="search_content">Search by destination or activities</string>
    <string name="bali_content">Find the best sea experiences in Island of God</string>
    <string name="bajo_content">Enjoy living on board in popular destination</string>
    <string name="search_destination">Search Destination</string>
    <string name="search_by">Search by destination or activities</string>
    <string name="boat_rules">Boat Rules</string>
    <string name="no_infant">Boat Rules</string>
    <string name="no_smoking">No Smoking</string>
    <string name="continue_payment">Continue to Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="prev">Prev</string>
    <string name="policy">  Payment, Cancellation and Refund Policy</string>
    <string name="rating_lower">Rating lower to high</string>
    <string name="rating_start">Start date till now</string>
    <string name="title">Title</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_idnum">Enter id number</string>
    <string name="fill_data">Fill in your data</string>
    <string name="see_ticket">See Ticket</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="apply">Apply</string>
    <string name="full_payment">Full Payment</string>
    <string name="down_payment">Down Payment</string>
    <string name="description">Description</string>
    <string name="get_your_discount">  Get Your Discount</string>
    <string name="get_discount">Get a discount</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="redeem_point">Redeem Your Point</string>
    <string name="create_account">Create account and collect points</string>
    <string name="choose_favorite_ctivity">Choose your favorite activities</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="bank_transfer_content">Various bank options for easier payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_content">Only for Indonesian credit card users</string>
    <string name="paypal">Paypal</string>
    <string name="termasuk">Penjemputan dan pengantaran kembali ke hotel Peralatan keamanan\nAsuransi yang disediakan oleh operator (untuk peserta berusia 9-70 tahun)</string>
    <string name="paypal_content">Paypal and international credit card users.\n4.4% tax will be
        charged to your payment</string>
    <string name="pay_booking">Please Pay your booking</string>
    <string name="payment_success">PAYMENT SUCCESS</string>
    <string name="complete_payment">Complete your payment within the time below</string>
    <string name="description_sample">The speed characteristics of the boat Accura 48
        make it an ideal choice when visiting several places in one day. The maximum capacity of the
        vessel is 12 people; even a large company will fit.
        </string>
    <string name="payment_detail">Payment Detail</string>
    <string name="total_payment">Total Payment</string>
    <string name="see_details">See Details</string>
    <string name="price_detail">Price Details</string>
    <string name="how_to_pay">How to pay?</string>
    <string name="payment">Price Details</string>
    <string name="payments">Payment</string>
    <string name="account_number">Account Number</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="data_security">Data Security</string>
    <string name="data_security_content1">Your info is safe with us. All data is encrypted and
        transmitted securely with an SSL protocol.</string>
    <string name="data_security_content2">cGO respects your privacy. We do not sell your
        personal information to anyone. </string>
    <string name="booking_detail">Booking Detail</string>
    <string name="order_id">Order ID</string>
    <string name="booked_by">Booked By</string>
    <string name="hotel_near">Hotel near your destination</string>
    <string name="no_hotel_near"> No recommended hotel yet, we are in the progress to find the best hotel for you</string>
    <string name="place">Place</string>
    <string name="search">Search</string>
    <string name="guest_detail">Guest Detail</string>
    <string name="time">Time</string>
    <string name="search_transportation">Search Transportation</string>
    <string name="how_use_ticket"> How to use ticket</string>
    <string name="how_use_content1">Show e-ticket to check-in at your departure place </string>
    <string name="how_use_content2">Bring your official identity document as used in your booking</string>
    <string name="how_use_content3">Please arrive at the meeting point 60 minutes before departure</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select">Select</string>
    <string name="select_guest">Select Guest</string>
    <string name="select_date">Select Date</string>
    <string name="departure">Departure</string>
    <string name="returns">Return ?</string>
    <string name="sort_by">Sort By</string>
    <string name="filter_by">Filter By</string>
    <string name="filter">Filter</string>
    <string name="confirm">Confirm</string>
    <string name="shorts">Sort</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_type">Please type the verification code sent \nto +62 89697526474</string>
    <string name="basic_info">Basic Info</string>
    <string name="tell_us">Tell us about yourself</string>
    <string name="done">Done</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
</resources>