<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".View.ActivityLogin">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:src="@drawable/left_arrow"
        />

    <id.dtech.cgo.CustomView.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textSize="18sp"
        android:textColor="@color/profile_name"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        app:myFontStyle="rubik_medium"
        />

    <id.dtech.cgo.CustomView.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_easy_Step"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/profile_name"
        app:myFontStyle="nunito_sans_semibold"
        />

    <id.dtech.cgo.CustomView.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textSize="16sp"
        android:textColor="@color/profile_name"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        app:myFontStyle="nunito_sans_semibold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp">

            <id.dtech.cgo.CustomView.MyTextView
                android:id="@+id/txtCountryCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="+62."
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:myFontStyle="nunito_sans_reguler"
                />

            <Space
                android:layout_width="6dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_black_dropdown"
                />

        </LinearLayout>

        <Space
            android:layout_width="16sp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_border">

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_phone"
                android:textSize="14sp"
                android:inputType="number"
                />

        </LinearLayout>

    </LinearLayout>

    <id.dtech.cgo.CustomView.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_sure_phone"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:lineSpacingExtra="6dp"
        android:textColor="@color/profile_name"
        app:myFontStyle="nunito_sans_reguler"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/next"
        android:background="@drawable/background_bluerounded"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</LinearLayout>