<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textSize="14sp"
            android:textColor="@color/profile_name"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="12dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/enter_name"
                android:textSize="14sp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_type"
            android:textSize="14sp"
            android:textColor="@color/profile_name"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="ID Card"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                />

            <Space
                android:layout_width="6dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_black_dropdown"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textSize="14sp"
            android:textColor="@color/profile_name"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_border"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="12dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/enter_idnum"
                android:textSize="14sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>