<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ActivitySignUp"
    android:background="@color/white"
    android:overScrollMode="never"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:src="@drawable/left_arrow"
            />

        <id.dtech.cgo.CustomView.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_info"
            android:textSize="18sp"
            android:textColor="@color/profile_name"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            app:myFontStyle="rubik_medium"
            />

        <id.dtech.cgo.CustomView.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tell_us"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:lineSpacingExtra="6dp"
            android:textColor="@color/profile_name"
            app:myFontStyle="nunito_sans_semibold"
            />

        <id.dtech.cgo.CustomView.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textSize="16sp"
            android:textColor="@color/profile_name"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            app:myFontStyle="nunito_sans_semibold"
            />

        <id.dtech.cgo.CustomView.MyTextView
            android:id="@+id/txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+62 89697526474"
            android:textSize="16sp"
            android:textColor="@color/profile_name"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            app:myFontStyle="nunito_sans_reguler"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <id.dtech.cgo.CustomView.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textSize="14sp"
                android:textColor="@color/profile_name"
                app:myFontStyle="nunito_sans_semibold"
                />

            <LinearLayout
                android:id="@+id/linearFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border"
                android:orientation="horizontal"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/edtFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_name"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/txtErrorFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter your fullname"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/error_color"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <id.dtech.cgo.CustomView.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="14sp"
                android:textColor="@color/profile_name"
                app:myFontStyle="nunito_sans_semibold"
                />

            <LinearLayout
                android:id="@+id/linearAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border"
                android:orientation="horizontal"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_email_address"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/txtErrorAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter your email address"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/error_color"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <id.dtech.cgo.CustomView.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/profile_name"
                app:myFontStyle="nunito_sans_semibold"
                />

            <LinearLayout
                android:id="@+id/linearPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border"
                android:orientation="horizontal"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_weight="1"
                    android:hint="@string/enter_your_password"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    />

                <ImageView
                    android:id="@+id/imgHide"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_hide_pass"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/txtErrorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter your password. Min. 7 characters"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/error_color"
                android:visibility="gone"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/done"
            android:background="@drawable/background_bluerounded"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>