<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".View.ActivityVerification">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:src="@drawable/left_arrow"
        />

    <id.dtech.cgo.CustomView.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textSize="18sp"
        android:textColor="@color/profile_name"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        app:myFontStyle="rubik_medium"
        />

    <id.dtech.cgo.CustomView.MyTextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification_type"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:lineSpacingExtra="6dp"
        android:textColor="@color/profile_name"
        app:myFontStyle="nunito_sans_semibold"
        />

    <id.dtech.cgo.CustomView.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:textColor="@color/profile_name"
        app:myFontStyle="nunito_sans_semibold"
        />

    <com.poovam.pinedittextfield.SquarePinField
        android:id="@+id/etBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:noOfFields="6"
        app:cornerRadius="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:inputType="number"
        app:fieldColor="@color/text14"
        app:fieldBgColor="#FFFFFF"
        app:highlightColor="@color/text14"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp">

        <id.dtech.cgo.CustomView.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Code sent successfully, enter before"
            android:textSize="12sp"
            android:textColor="@color/profile_name"
            app:myFontStyle="nunito_sans_reguler"
            />

        <Space
            android:layout_width="4dp"
            android:layout_height="match_parent"/>

        <id.dtech.cgo.CustomView.MyTextView
            android:id="@+id/txTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:30"
            android:textSize="12sp"
            android:textColor="@color/profile_name"
            android:textStyle="bold"
            app:myFontStyle="nunito_sans_semibold"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/confirm"
        android:background="@drawable/background_bluerounded"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:enabled="false"
        android:textStyle="bold"
        />

</LinearLayout>